--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -7,13 +7,13 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Drill to the Core"
         android:theme="@style/GdxTheme" >
         <activity
             android:name="tiko.coregames.drilltothecore.AndroidLauncher"
-            android:label="@string/app_name" 
+            android:label="Drill to the Core"
             android:screenOrientation="landscape"
-            android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize">
+            android:configChanges="keyboard|locale|keyboardHidden|navigation|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
